--- a/Makefile.dev
+++ b/Makefile.dev
@@ -5,4 +5,9 @@ ci:
 ci_custom_matrix:
 	@# repeat --matrix arg for multiple distros
 	act -W .github/workflows/ci.yaml \
-		--matrix dist:nrdot-collector-host
+		--matrix distribution:nrdot-collector-host
+
+ci_nightly_custom_matrix:
+	@# repeat --matrix arg for multiple distros
+	act schedule -W .github/workflows/ci-nightly.yaml \
+		--matrix distribution:nrdot-collector-host
