--- a/distributions/nr-otel-collector/.goreleaser-nightly.yaml
+++ b/distributions/nr-otel-collector/.goreleaser-nightly.yaml
@@ -1,5 +1,7 @@
 version: 2
 project_name: nrdot-collector-releases-nightly
+release:
+  disable: "true"
 builds:
   - id: nr-otel-collector
     goos:
@@ -129,10 +131,4 @@ signs:
       - --detach-sign
       - ${artifact}
     signature: ${artifact}.sig
-    artifacts: all
-    certificate: ${artifact}.pem
-docker_signs:
-  - args:
-      - sign
-      - ${artifact}
     artifacts: all
