--- a/test/e2e/Makefile
+++ b/test/e2e/Makefile
@@ -1,7 +1,7 @@
 KIND_CLUSTER_NAME ?=e2etest
 K8S_CONTEXT_NAME=kind-${KIND_CLUSTER_NAME}
 DISTRO ?=nr-otel-collector
-IMAGE_REPO=newrelic/${DISTRO}
+IMAGE_REPO ?=newrelic/${DISTRO}
 THIS_MAKEFILE_DIR := $(realpath $(dir $(realpath $(lastword $(MAKEFILE_LIST)))))
 ROOT_DIR := $(realpath $(THIS_MAKEFILE_DIR)/../..)
 
@@ -52,6 +52,7 @@ ci_test:
 	E2E_TEST__K8S_CONTEXT_NAME=${K8S_CONTEXT_NAME} \
 	E2E_TEST__DISTRO_TO_TEST=${DISTRO} \
 	E2E_TEST__IMAGE_TAG=${IMAGE_TAG} \
+	E2E_TEST__IMAGE_REPO=${IMAGE_REPO} \
 	E2E_TEST__NR_BACKEND_URL=${NR_BACKEND_URL} \
 	E2E_TEST__NR_INGEST_KEY=${NR_INGEST_KEY} \
 	E2E_TEST__NR_API_KEY=${NR_API_KEY} \
