--- a/distributions/nrdot-collector-k8s/.goreleaser-nightly.yaml
+++ b/distributions/nrdot-collector-k8s/.goreleaser-nightly.yaml
@@ -1,5 +1,7 @@
 version: 2
 project_name: nrdot-collector-releases-nightly
+release:
+  disable: "true"
 builds:
   - id: nrdot-collector-k8s
     goos:
@@ -38,6 +40,8 @@ dockers:
     image_templates:
       - '{{ .Env.REGISTRY }}/nrdot-collector-k8s:{{ .Version }}-nightly-amd64'
       - '{{ .Env.REGISTRY }}/nrdot-collector-k8s:nightly-amd64'
+    extra_files:
+      - config.yaml
     build_flag_templates:
       - --pull
       - --platform=linux/amd64
@@ -54,6 +58,8 @@ dockers:
     image_templates:
       - '{{ .Env.REGISTRY }}/nrdot-collector-k8s:{{ .Version }}-nightly-arm64'
       - '{{ .Env.REGISTRY }}/nrdot-collector-k8s:nightly-arm64'
+    extra_files:
+      - config.yaml
     build_flag_templates:
       - --pull
       - --platform=linux/arm64
@@ -81,10 +87,4 @@ signs:
       - --detach-sign
       - ${artifact}
     signature: ${artifact}.sig
-    artifacts: all
-    certificate: ${artifact}.pem
-docker_signs:
-  - args:
-      - sign
-      - ${artifact}
     artifacts: all
