--- a/distributions/nrdot-collector-k8s/Dockerfile
+++ b/distributions/nrdot-collector-k8s/Dockerfile
@@ -8,6 +8,8 @@ USER ${USER_UID}
 
 COPY --from=certs /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY --chmod=755 nrdot-collector-k8s /nrdot-collector-k8s
+COPY config.yaml /etc/nrdot-collector-k8s/config.yaml
 ENTRYPOINT ["/nrdot-collector-k8s"]
+CMD ["--config", "/etc/nrdot-collector-k8s/config.yaml"]
 # `4137` and `4318`: OTLP
 EXPOSE 4317 4318
