--- a/.github/workflows/ci-base.yaml
+++ b/.github/workflows/ci-base.yaml
@@ -107,7 +107,8 @@ jobs:
           args: ${{ env.goreleaser_args }}
           workdir: distributions/${{ inputs.distribution }}
 
-      - name: Extract image version and arch
+      # TODO: extract docker manifest sha
+      - name: Extract relevant metadata
         run: |
           VERSION=$(echo '${{ steps.goreleaser.outputs.metadata }}' | jq -r '.version')
           ARCH=$(echo '${{ runner.arch }}' | sed 's/X/amd/g')
