--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -36,6 +36,11 @@ on:
         type: string
         required: false
         default: "INFO"
+      distro:
+        description: "List of distributions to test"
+        type: string
+        required: false
+        default: "nrdot-collector-host"
     secrets:
       aws_access_key_id:
         description: "AWS credentials for tf with permission to assume resource-provider"
@@ -48,11 +53,10 @@ on:
         required: true
       nr_backend_url:
         description: "NR backend url for test purposes"
-        required: true
+        required: false
       nr_ingest_key:
         description: "NR ingest key for test purposes"
-        required: true
-
+        required: false
 
 jobs:
   terraform:
@@ -66,6 +70,7 @@ jobs:
       TF_VAR_aws_account_id: ${{ secrets.aws_account_id }}
       TF_VAR_nr_backend_url: ${{ secrets.nr_backend_url }}
       TF_VAR_nr_ingest_key: ${{ secrets.nr_ingest_key }}
+      TF_VAR_distros: ${{ inputs.distros}}
 
     steps:
       - name: Checkout repository
@@ -77,6 +82,8 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.9.8
+
+        # TODO: use workspace to namespace state
 
       - name: Terraform Init
         working-directory: ./test/terraform/${{ inputs.tf_work_subdir }}
