--- a/distributions/nrdot-collector-k8s/.goreleaser.yaml
+++ b/distributions/nrdot-collector-k8s/.goreleaser.yaml
@@ -32,8 +32,8 @@ dockers:
       - newrelic/nrdot-collector-k8s:{{ .Version }}-amd64
       - newrelic/nrdot-collector-k8s:latest-amd64
     extra_files:
-      - config-node.yaml
-      - config-cluster.yaml
+      - config-daemonset.yaml
+      - config-deployment.yaml
     build_flag_templates:
       - --pull
       - --platform=linux/amd64
@@ -51,8 +51,8 @@ dockers:
       - newrelic/nrdot-collector-k8s:{{ .Version }}-arm64
       - newrelic/nrdot-collector-k8s:latest-arm64
     extra_files:
-      - config-node.yaml
-      - config-cluster.yaml
+      - config-daemonset.yaml
+      - config-deployment.yaml
     build_flag_templates:
       - --pull
       - --platform=linux/arm64
