--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,8 @@ jobs:
     uses: ./.github/workflows/ci-base.yaml
     with:
       distribution: ${{ matrix.distribution }}
-      test_cluster_name: 'ci-e2etest'
+      # namespace by distro to avoid issues with cleanup (distro 1 still running tests while distro 2 cleans up cluster)
+      test_cluster_name: 'ci-e2etest-${{ matrix.distribution }}'
     secrets:
       docker_hub_username: ${{ secrets.OTELCOMM_DOCKER_HUB_USERNAME }}
       docker_hub_password: ${{ secrets.OTELCOMM_DOCKER_HUB_PASSWORD }}
