chore: remove legacy distro nr-otel-collector

--- a/.github/workflows/ci-nightly.yaml
+++ b/.github/workflows/ci-nightly.yaml
@@ -20,8 +20,8 @@ jobs:
     strategy:
       matrix:
         distribution:
-          - nr-otel-collector
           - nrdot-collector-host
+          - nrdot-collector-k8s
     uses: ./.github/workflows/ci-base.yaml
     with:
       nightly: true
@@ -46,7 +46,6 @@ jobs:
     strategy:
       matrix:
         distribution:
-          - nr-otel-collector
           - nrdot-collector-host
     steps:
       - name: Checkout
