--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,8 +16,8 @@ jobs:
     strategy:
       matrix:
         distribution:
-          - nr-otel-collector
           - nrdot-collector-host
+          - nrdot-collector-k8s
     uses: ./.github/workflows/ci-base.yaml
     with:
       distribution: ${{ matrix.distribution }}
