ci: pin nightly image via sha256

--- a/.github/workflows/ci-nightly.yaml
+++ b/.github/workflows/ci-nightly.yaml
@@ -123,7 +123,14 @@ jobs:
           version: '~> v2'
           args: --skip=announce,validate --clean --timeout 2h --config .goreleaser-nightly.yaml
           workdir: distributions/${{ matrix.distribution }}
-
+      - name: Extract Docker Manifest SHA
+        id: extract_docker_manifest_sha
+        run: |
+          echo "docker_manifest_sha=$(echo '${{ steps.goreleaser.outputs.artifacts }}' |
+            yq -r '.[] | select(.type == "Docker Manifest") | .extra.Digest')" >> $GITHUB_OUTPUT
+    outputs:
+      docker_manifest_sha: ${{ steps.extract_docker_manifest_sha.outputs.docker_manifest_sha }}
+  
   deploy-nightly:
     uses: ./.github/workflows/terraform.yaml
     if: ${{ !github.event.act }}
@@ -140,7 +147,7 @@ jobs:
       execute_plan: true
       execute_apply: true
       distro: ${{ matrix.distribution }}
-      # TODO: add docker manifest sha
+      nightly_docker_manifest_sha: ${{ needs.publish.outputs.docker_manifest_sha }}
     secrets:
       aws_access_key_id: ${{ secrets.OTELCOMM_AWS_TEST_ACC_ACCESS_KEY_ID }}
       aws_secret_access_key: ${{secrets.OTELCOMM_AWS_TEST_ACC_SECRET_ACCESS_KEY}}
