--- a/.github/workflows/ci-nightly.yaml
+++ b/.github/workflows/ci-nightly.yaml
@@ -144,6 +144,7 @@ jobs:
     with:
       branch: ${{ github.ref }}
       tf_work_subdir: nightly
+      workspace: 'nightly-${{ matrix.distribution }}'
       execute_plan: true
       execute_apply: true
       distro: ${{ matrix.distribution }}
