--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -11,6 +11,11 @@ on:
         description: "Subdir of ./test/terraform/ to execute tf in. Used to separate different tf use cases"
         type: string
         required: true
+      workspace:
+        description: "Terraform workspace to use"
+        type: string
+        required: true
+        default: default
       execute_plan:
         description: "Whether to run `terraform plan` or not"
         type: boolean
@@ -89,7 +94,10 @@ jobs:
         with:
           terraform_version: 1.9.8
 
-        # TODO: use workspace to namespace state
+      - name: Select Workspace
+        working-directory: ./test/terraform/${{ inputs.tf_work_subdir }}
+        run: |
+          terraform workspace select ${{ inputs.workspace }} -or-create=true
 
       - name: Terraform Init
         working-directory: ./test/terraform/${{ inputs.tf_work_subdir }}
