ci: add job names

--- a/.github/workflows/ci-nightly.yaml
+++ b/.github/workflows/ci-nightly.yaml
@@ -132,6 +132,7 @@ jobs:
       docker_manifest_sha: ${{ steps.extract_docker_manifest_sha.outputs.docker_manifest_sha }}
   
   deploy-nightly:
+    name: Deploy Nightly
     uses: ./.github/workflows/terraform.yaml
     if: ${{ !github.event.act }}
     needs: publish
@@ -157,7 +158,7 @@ jobs:
       nr_ingest_key: ${{ secrets.OTELCOMM_NR_INGEST_KEY }}
 
   test-nightly:
-    name: Build & Publish Nightly
+    name: Test Nightly
     runs-on: ubuntu-latest
     needs: deploy-nightly
     strategy:
